test/compilable/objc_interface_final_19654.d
// EXTRA_OBJC_SOURCES

extern (Objective-C)
interface Bar
{
    final void foo() @selector("foo") {}
}
